# methodray

./: .gitignore  .rubocop.yml  Cargo.toml  Gemfile  LICENSE  README.md  Rakefile  methodray.gemspec  test_chain.rb  test_error.rb  test_example.rb  test_line2.rb  test_multiple_errors.rb  test_simple_error.rb  test_watch.rb
.github/workflows/: ci.yml  release.yml
exe/: methodray
ext/: Cargo.toml  extconf.rb
ext/src/: cli.rs  lib.rs
lib/: methodray.rb
lib/methodray/: cli.rb  commands.rb  methodray-cli  version.rb
rust/: Cargo.toml
rust/src/: checker.rs  lib.rs  main.rs  parser.rs  types.rs
rust/src/analyzer/: blocks.rs  calls.rs  definitions.rs  dispatch.rs  install.rs  literals.rs  mod.rs  parameters.rs  variables.rs
rust/src/analyzer/tests/: integration_test.rs
rust/src/cache/: rbs_cache.rs
rust/src/diagnostics/: diagnostic.rs  formatter.rs  mod.rs
rust/src/env/: global_env.rs  local_env.rs  method_registry.rs  mod.rs  scope.rs
rust/src/graph/: box.rs  change_set.rs  mod.rs
rust/src/lsp/: diagnostics.rs  main.rs  mod.rs  server.rs
rust/src/rbs/: converter.rs  loader.rs  method_loader.rb  mod.rs
src/: checker.rs  lib.rs  main.rs  source_map.rs
src/analyzer/: install.rs  mod.rs
src/cache/: mod.rs  rbs_cache.rs
src/diagnostics/: diagnostic.rs  formatter.rs
src/env/: global_env.rs  mod.rs
src/graph/: box.rs  change_set.rs  mod.rs  vertex.rs
src/rbs/: converter.rs  error.rs  loader.rs  mod.rs
test/: blocks_test.rb  methodray_test.rb  test_helper.rb
