[package]
name = "methodray"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "methodray"
path = "src/lib.rs"

[[bin]]
name = "methodray"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
rayon = "1.10"
walkdir = "2.5"
magnus = "0.8"
anyhow = "1.0"
thiserror = "1.0"
ruby-prism = "1.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"], optional = true }
notify = { version = "6.1", optional = true }

[features]
cli = ["clap", "notify"]

[dev-dependencies]
tempfile = "3.13"
