[package]
name = "methodray"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "methodray"
path = "src/lib.rs"

[[bin]]
name = "methodray-cli"
path = "src/cli.rs"
required-features = ["cli"]

[features]
default = []
cli = ["methodray-core/cli", "dep:clap", "dep:anyhow"]

[dependencies]
methodray-core = { path = "../rust", features = ["ruby-ffi"] }
magnus = "0.8"
clap = { version = "4", features = ["derive"], optional = true }
anyhow = { version = "1", optional = true }
