[package]
name = "methodray-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "methodray_core"
path = "src/lib.rs"

[[bin]]
name = "methodray"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "methodray-lsp"
path = "src/lsp/main.rs"
required-features = ["lsp"]

[dependencies]
smallvec = "1.13"
rayon = "1.10"
walkdir = "2.5"
anyhow = "1.0"
thiserror = "1.0"
ruby-prism = "1.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"], optional = true }
notify = { version = "6.1", optional = true }
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tempfile = { version = "3.13", optional = true }
magnus = { version = "0.8", optional = true }

[features]
cli = ["clap", "notify"]
lsp = ["tower-lsp", "tokio", "tempfile"]
ruby-ffi = ["magnus"]

[dev-dependencies]
tempfile = "3.13"
